# detectpii

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
detectpii/: detector.py  model.py  pii_type.py  pipeline.py  scanner.py  util.py
detectpii/catalog/: __init__.py  bigquery_catalog.py  hive_catalog.py  postgres_catalog.py  snowflake_catalog.py  test_catalog.py  trino_catalog.py  yugabyte_catalog.py
detectpii/common_regex/: __init__.py  base.py  english_common_regex.py
detectpii/detector/: __init__.py  column_name_regex.py  column_value_regex.py  english_column_name_regex.py  spanish_column_name_regex.py
detectpii/pipeline/: __init__.py  persistence.py  pii_detection.py
detectpii/resolver/: __init__.py  environment.py  model.py  plaintext.py
detectpii/scanner/: __init__.py  data.py  metadata.py
docs/: 000-introduction.md  001-usage.md
test/catalog/: sqlite_memory_catalog.py
test/detector/: test_spanish_column_name_regex.py
test/scanner/: test_data_scanner.py  test_metadata_scanner.py
