[tool.poetry]
name = "detectpii"
version = "0.1.1"
repository = "https://github.com/thescalaguy/detectpii"
description = "Detect PII columns in your database and warehouse"
authors = ["Fasih Khatib <hellofasih.confound928@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.2.0"
cattrs = "^23.2.3"
trino = { extras = ["sqlalchemy"], version = "^0.329.0" }
psycopg2-binary = "^2.9.9"
tabulate = "^0.9.0"
snowflake-sqlalchemy = "^1.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
