[tool.poetry]
name = "detectpii"
version = "0.1.6"
repository = "https://github.com/thescalaguy/detectpii"
description = "Detect PII columns in your database and warehouse"
authors = ["Fasih Khatib <hellofasih.confound928@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^24.2.0"
cattrs = "^23.2.3"
tabulate = "^0.9.0"

trino = { extras = ["sqlalchemy"], version = "^0.329.0", optional = true }
psycopg2-binary = { version = "^2.9.9", optional = true }
snowflake-sqlalchemy = { version = "^1.6.1", optional = true }
sqlalchemy = { version = "^2.0.32", optional = true }
pyhive = { extras = ["hive-pure-sasl"], version = "^0.7.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.poetry.extras]
hive = ["pyhive", "sqlalchemy"]
postgres = ["psycopg2-binary", "sqlalchemy"]
snowflake = ["snowflake-sqlalchemy", "sqlalchemy"]
trino = ["trino", "sqlalchemy"]
yugabyte = ["psycopg2-binary", "sqlalchemy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
